--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>repl.it</title>
+    <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
+    <title>html-css-week5-assessment-1</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+
   <body>
     <div class="container">
-      <section class="topbar">
+      <header>
         <img src="assets/images/logo.svg" alt="logo" class="logo">
-      </section>
+      </header>
       <section class="content">
         <header>
           <img src="assets/images/illustration-mockups.svg" alt="design mockup" class="mock-illustration">
@@ -28,12 +30,18 @@
           <p class="description">Huddle re-imagines the way we build communities. You have a voice but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
           <button>Register</button>
         </article>
-        <footer>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-instagram"></i>
-        </footer>
       </section>
+      <footer>
+        <div>
+          <i class="fab fa-facebook-f"></i>
+        </div>
+        <div>
+          <i class="fab fa-twitter"></i>
+        </div>
+        <div>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
