--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <img src="assets/images/logo.svg" alt="logo" class="logo">
       </header>
       <section class="content">
-        <header>
+        <div class="header">
           <img src="assets/images/illustration-mockups.svg" alt="design mockup" class="mock-illustration">
-        </header>
+        </div>
         <article class="copy-text">
           <h1 class="title">Build The Community Your Fans Will Love</h1>
           <p class="description">Huddle re-imagines the way we build communities. You have a voice but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
